--- a/supersoccer.plist
+++ b/supersoccer.plist
@@ -11,7 +11,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>http://119.146.200.65/supersoccer.ipa</string>
+<string>http://119.146.200.65/ios/supersoccer.ipa</string>
 </dict>
 </array>
 <key>metadata</key>
