--- a/test.plist
+++ b/test.plist
@@ -11,19 +11,19 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>http://119.146.200.65/11-23.ipa</string>
+<string>http://119.146.200.65/ios/1204.ipa</string>
 </dict>
 </array>
 <key>metadata</key>
 <dict>
 <key>bundle-identifier</key>
-<string>SWR2BWQCL6.com.echo.kkaomenwns</string>
+<string>TD26LZ4AF6.com.test.zjss</string>
 <key>bundle-version</key>
 <string>1.0</string>
 <key>kind</key>
 <string>software</string>
 <key>title</key>
-<string>Super Soccer</string>
+<string>Super Soccer(beta)</string>
 </dict>
 </dict>
 </array>
