--- a/test.plist
+++ b/test.plist
@@ -23,7 +23,7 @@
 <key>kind</key>
 <string>software</string>
 <key>title</key>
-<string>Super Soccer (rev:55190)</string>
+<string>Super Soccer (rev:55190,build:2)</string>
 </dict>
 </dict>
 </array>
