--- a/test.plist
+++ b/test.plist
@@ -11,7 +11,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>http://119.146.200.65/ios/55190-1215-02.ipa</string>
+<string>http://119.146.200.65/ios/55983-1221.ipa</string>
 </dict>
 </array>
 <key>metadata</key>
@@ -23,7 +23,7 @@
 <key>kind</key>
 <string>software</string>
 <key>title</key>
-<string>Super Soccer (rev:55190,build:2)</string>
+<string>Super Soccer (rev:55983)</string>
 </dict>
 </dict>
 </array>
