--- a/supersoccer.plist
+++ b/supersoccer.plist
@@ -17,13 +17,13 @@
 <key>metadata</key>
 <dict>
 <key>bundle-identifier</key>
-<string>SWR2BWQCL6.com.echo.kkaomenwns</string>
+<string>MHK8T98VT4.com.35tui.qm</string>
 <key>bundle-version</key>
 <string>1.0</string>
 <key>kind</key>
 <string>software</string>
 <key>title</key>
-<string>Super Soccer</string>
+<string>Super Soccer (Rev55983)</string>
 </dict>
 </dict>
 </array>
