--- a/test.plist
+++ b/test.plist
@@ -17,7 +17,7 @@
 <key>metadata</key>
 <dict>
 <key>bundle-identifier</key>
-<string>TD26LZ4AF6.com.test.zjss</string>
+<string>MHK8T98VT4.com.35tui.qm</string>
 <key>bundle-version</key>
 <string>1.0</string>
 <key>kind</key>
