--- a/test.plist
+++ b/test.plist
@@ -11,7 +11,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>http://119.146.200.65/ios/55983-1221.ipa</string>
+<string>http://119.146.200.65/ios/55983_1221.ipa</string>
 </dict>
 </array>
 <key>metadata</key>
