--- a/supersoccer.plist
+++ b/supersoccer.plist
@@ -23,7 +23,7 @@
 <key>kind</key>
 <string>software</string>
 <key>title</key>
-<string>Super Soccer (Rev55983)</string>
+<string>Super Soccer (rev:55983)</string>
 </dict>
 </dict>
 </array>
