--- a/supersoccer.plist
+++ b/supersoccer.plist
@@ -11,13 +11,13 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>http://119.146.200.65/ios/59874_0123.ipa</string>
+<string>http://119.146.200.65/ios/59874_0123_er.ipa</string>
 </dict>
 </array>
 <key>metadata</key>
 <dict>
 <key>bundle-identifier</key>
-<string>TD26LZ4AF6.com.test.zjss</string>
+<string>MHK8T98VT4.com.35tui.qm</string>
 <key>bundle-version</key>
 <string>1.0</string>
 <key>kind</key>
